# scythe

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yaml  _typos.toml  deny.toml  poly.toml  pyproject.toml  zensical.toml
crates/scythe-backend/: Cargo.toml
crates/scythe-backend/src/: errors.rs  lib.rs  manifest.rs  naming.rs  renderer.rs  types.rs
crates/scythe-cli/: Cargo.toml
crates/scythe-cli/src/: main.rs
crates/scythe-cli/src/commands/: audit.rs  fmt.rs  generate.rs  inspect.rs  lint_cmd.rs  migrate.rs  mod.rs  shared.rs
crates/scythe-cli/tests/: cli_integration.rs  compile_check.rs  inspect_cli_smoke.rs  integration_audit.rs  lint_integration.rs
crates/scythe-codegen/: Cargo.toml
crates/scythe-codegen/manifests/: csharp-microsoft-sqlite.toml  csharp-mysqlconnector.toml  csharp-npgsql.redshift.toml  csharp-npgsql.toml  csharp-oracle.toml  csharp-snowflake.toml  csharp-sqlclient.toml  elixir-ecto.toml  elixir-exqlite.toml  elixir-jamdb.toml  elixir-myxql.toml  elixir-postgrex.redshift.toml  elixir-tds.toml  go-database-sql.duckdb.toml  go-database-sql.mariadb.toml  go-database-sql.mssql.toml  go-database-sql.mysql.toml  go-database-sql.sqlite.toml  go-godror.toml  go-gosnowflake.toml  go-pgx.redshift.toml  go-pgx.toml  java-jdbc.duckdb.toml  java-jdbc.mariadb.toml  java-jdbc.mssql.toml  java-jdbc.mysql.toml  java-jdbc.oracle.toml  java-jdbc.redshift.toml  java-jdbc.snowflake.toml  java-jdbc.sqlite.toml  java-r2dbc.mariadb.toml  java-r2dbc.mssql.toml  java-r2dbc.mysql.toml  java-r2dbc.oracle.toml  java-r2dbc.sqlite.toml  java-r2dbc.toml  kotlin-exposed.toml  kotlin-jdbc.duckdb.toml  kotlin-jdbc.mariadb.toml  kotlin-jdbc.mssql.toml  (+53 more)
crates/scythe-codegen/src/: backend_trait.rs  enum_gen.rs  lib.rs  overrides.rs  query_fn.rs  resolve.rs  structs.rs  validation.rs
crates/scythe-codegen/src/backends/: csharp_microsoft_sqlite.rs  csharp_mysqlconnector.rs  csharp_npgsql.rs  csharp_oracle.rs  csharp_snowflake.rs  csharp_sqlclient.rs  elixir_ecto.rs  elixir_exqlite.rs  elixir_jamdb.rs  elixir_myxql.rs  elixir_postgrex.rs  elixir_tds.rs  go_database_sql.rs  go_godror.rs  go_gosnowflake.rs  go_pgx.rs  java_jdbc.rs  java_r2dbc.rs  kotlin_exposed.rs  kotlin_jdbc.rs  kotlin_r2dbc.rs  mod.rs  php_amphp.rs  php_pdo.rs  python_aiomysql.rs  python_aiosqlite.rs  python_asyncpg.rs  python_common.rs  python_duckdb.rs  python_oracledb.rs  python_psycopg3.rs  python_pyodbc.rs  python_snowflake.rs  ruby_mysql2.rs  ruby_oci8.rs  ruby_pg.rs  ruby_rbs.rs  ruby_sqlite3.rs  ruby_tiny_tds.rs  ruby_trilogy.rs  (+13 more)
crates/scythe-codegen/tests/: tool_validation.rs
crates/scythe-core/: Cargo.toml
crates/scythe-core/src/: dialect.rs  errors.rs  lib.rs
crates/scythe-core/src/analyzer/: expressions.rs  helpers.rs  mod.rs  params.rs  scope.rs  statements.rs  type_conversion.rs  types.rs
crates/scythe-core/src/catalog/: mod.rs  type_normalizer.rs  view_resolver.rs
crates/scythe-core/src/parser/: mod.rs
crates/scythe-inspect/: Cargo.toml
crates/scythe-inspect/src/: config.rs  driver.rs  error.rs  lib.rs  registry.rs  spec.rs  suppression.rs
crates/scythe-inspect/src/mysql/: mod.rs
crates/scythe-inspect/src/postgres/: checks.rs  checks.toml  mod.rs  runner.rs
crates/scythe-inspect/tests/: config_smoke.rs  pg_live.rs  reporter_snapshot.rs
crates/scythe-lint/: Cargo.toml
crates/scythe-lint/src/: engine.rs  lib.rs  registry.rs  rule.rs  sqruff_adapter.rs  types.rs
crates/scythe-lint/src/audit/: matcher_rule.rs  mod.rs  registry.rs  spec.rs  suppression.rs
crates/scythe-lint/src/audit/matchers/: add_column_not_null_no_default.rs  add_constraint_without_using_index.rs  alter_column_drop_not_null.rs  alter_column_type.rs  alter_table_rename.rs  alter_table_rename_table.rs  cartesian_join.rs  check_constraint_always_true.rs  column_type_disallowed.rs  constraint_missing_not_valid.rs  create_domain_with_constraint.rs  grant_kind.rs  (+17 more)
crates/scythe-lint/src/reporters/: human.rs  json.rs  mod.rs  sarif.rs
crates/scythe-lint/src/rules/: antipattern.rs  codegen.rs  mod.rs  naming.rs  performance.rs  safety.rs  style.rs
integration_tests/rust-sqlx/: Cargo.toml  scythe.toml
integration_tests/rust-sqlx-mariadb/: Cargo.toml  scythe.toml
integration_tests/rust-sqlx-mariadb/src/: generated.rs  main.rs  queries.rs
integration_tests/rust-sqlx-mysql/: Cargo.toml  scythe.toml
integration_tests/rust-sqlx-mysql/src/: generated.rs  main.rs  queries.rs
integration_tests/rust-sqlx-redshift/: Cargo.toml  scythe.toml
integration_tests/rust-sqlx-redshift/src/: main.rs  queries.rs
integration_tests/rust-sqlx/src/: generated.rs  main.rs  queries.rs
integration_tests/rust-tiberius-mssql/: Cargo.toml  scythe.toml
integration_tests/rust-tiberius-mssql/src/: main.rs  queries.rs
integration_tests/rust-tokio-postgres/: Cargo.toml  scythe.toml
integration_tests/rust-tokio-postgres-redshift/: Cargo.toml  scythe.toml
integration_tests/rust-tokio-postgres-redshift/src/: main.rs  queries.rs
integration_tests/rust-tokio-postgres/src/: generated.rs  main.rs  queries.rs
tools/integration-test-generator/: Cargo.toml
tools/integration-test-generator/src/: main.rs
tools/integration-test-generator/templates/: Cargo.toml.integration.jinja  Gemfile.jinja  build.gradle.kts.jinja  composer.json.jinja  csharp.cs.jinja  csproj.jinja  elixir.exs.jinja  go.go.jinja  go.mod.jinja  java.java.jinja  kotlin.kt.jinja  mix.exs.jinja  package.json.jinja  php.php.jinja  pnpm-workspace.yaml.jinja  pom.xml.jinja  pyproject.toml.jinja  python.py.jinja  ruby.rb.jinja  rust.rs.jinja  scythe.toml.jinja  settings.gradle.kts.jinja  tsconfig.json.jinja  typescript.ts.jinja
tools/snippet-runner/: Cargo.toml
tools/snippet-runner/src/: discovery.rs  output.rs  parser.rs  runner.rs  types.rs
tools/snippet-runner/src/validators/: csharp.rs  java.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  sql.rs  typescript.rs
tools/test-generator/: Cargo.toml
tools/test-generator/src/: fixture.rs  main.rs
(+835 files in other folders)
