[workspace]
members = [
  ".",
  "crates/scythe-backend",
  "tools/test-generator",
  "tools/migrate-fixtures",
]

[package]
name = "scythe"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sqlparser = { version = "0.61", features = ["visitor"] }
ahash = { version = "0.8", features = ["serde"] }
scythe-backend = { path = "crates/scythe-backend" }
toml = "1.1.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
regex = "1"
sqruff-lib = "0.37"

[dev-dependencies]
