[package]
name = "scythe-backend"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Backend manifest, type resolution, and template rendering for scythe"
repository = "https://github.com/Goldziher/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "codegen", "type-safe", "database"]
categories = ["development-tools", "database"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
minijinja = { version = "2", features = ["loader"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1.1"
