[package]
name = "scythe-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "scythe"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
scythe-codegen = { path = "../scythe-codegen" }
scythe-core = { path = "../scythe-core" }
scythe-lint = { path = "../scythe-lint" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"
