[package]
name = "scythe-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI for scythe -- SQL-to-code generator with linting and formatting"
repository = "https://github.com/Goldziher/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "codegen", "type-safe", "database"]
categories = ["development-tools", "database"]

[[bin]]
name = "scythe"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
scythe-codegen = { path = "../scythe-codegen", version = "0.1.0" }
scythe-core = { path = "../scythe-core", version = "0.1.0" }
scythe-lint = { path = "../scythe-lint", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"

[dev-dependencies]
syn = { version = "2", features = ["full", "parsing"] }
tempfile = "3"
