[package]
name = "scythe-cli"
version = "0.6.2"
edition = "2024"
license = "MIT"
description = "CLI for scythe -- SQL-to-code generator with linting and formatting"
repository = "https://github.com/Goldziher/scythe"
homepage = "https://goldziher.github.io/scythe"
documentation = "https://goldziher.github.io/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "codegen", "cli", "database", "sqlc"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "scythe"
path = "src/main.rs"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
regex = "1"
scythe-backend = { path = "../scythe-backend", version = "0.6.2" }
scythe-codegen = { path = "../scythe-codegen", version = "0.6.2" }
scythe-core = { path = "../scythe-core", version = "0.6.2" }
scythe-lint = { path = "../scythe-lint", version = "0.6.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.1"

[dev-dependencies]
syn = { version = "2", features = ["full", "parsing"] }
tempfile = "3"
