[package]
name = "scythe-codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Polyglot code generation backends for scythe"
repository = "https://github.com/Goldziher/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "codegen", "type-safe", "database"]
categories = ["development-tools", "database"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
scythe-backend = { path = "../scythe-backend", version = "0.1.0" }
scythe-core = { path = "../scythe-core", version = "0.1.0" }
toml = "1.1"
