[package]
name = "scythe-codegen"
version = "0.6.9"
edition = "2024"
license = "MIT"
description = "Polyglot code generation backends for scythe"
repository = "https://github.com/Goldziher/scythe"
homepage = "https://goldziher.github.io/scythe"
documentation = "https://goldziher.github.io/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "codegen", "polyglot", "code-generation", "database"]
categories = ["development-tools", "database"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
scythe-backend = { path = "../scythe-backend", version = "0.6.9" }
scythe-core = { path = "../scythe-core", version = "0.6.9" }
toml = "1.1"
