[package]
name = "scythe-core"
version = "0.11.0"
edition = "2024"
license = "MIT"
description = "Core SQL parsing, catalog building, and type inference for scythe"
repository = "https://github.com/Goldziher/scythe"
homepage = "https://goldziher.github.io/scythe"
documentation = "https://goldziher.github.io/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "parser", "type-inference", "catalog", "analyzer"]
categories = ["database", "parser-implementations"]

[features]
default = []
serde = ["dep:serde"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"], optional = true }
sqlparser = { version = "0.62", features = ["visitor"] }

[dev-dependencies]
serde_json = "1"
