[package]
name = "scythe-lint"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
scythe-core = { path = "../scythe-core" }
serde = { version = "1", features = ["derive"] }
sqlparser = { version = "0.61", features = ["visitor"] }
sqruff-lib = "0.37"

[dev-dependencies]
serde_json = "1"
