[package]
name = "scythe-lint"
version = "0.6.7"
edition = "2024"
license = "MIT"
description = "SQL linting engine with 93 rules for scythe"
repository = "https://github.com/Goldziher/scythe"
homepage = "https://goldziher.github.io/scythe"
documentation = "https://goldziher.github.io/scythe"
authors = ["Na'aman Hirschfeld"]
keywords = ["sql", "linter", "lint", "formatting", "sqruff"]
categories = ["development-tools"]

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
scythe-core = { path = "../scythe-core", version = "0.6.7" }
serde = { version = "1", features = ["derive"] }
sqlparser = { version = "0.61", features = ["visitor"] }
sqruff-lib = "0.37"

[dev-dependencies]
serde_json = "1"
