[package]
name = "scythe-integration-test-rust-sqlx-mariadb"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono", "rust_decimal"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
