[package]
name = "scythe-integration-test-rust-sqlx-redshift"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1"
