[package]
name = "scythe-integration-test-rust-tiberius-mssql"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
tiberius = { version = "0.12", default-features = false, features = ["tds73", "rustls", "rust_decimal", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = "1"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1"
