[package]
name = "scythe-integration-test-rust-tokio-postgres-redshift"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["db-tokio-postgres"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
