[package]
name = "snippet-runner"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "snippet_runner"
path = "src/lib.rs"

[[bin]]
name = "snippet-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "1.1"
walkdir = "2.5"
which = "8"
