[package]
name = "test-generator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
ahash = { version = "0.8", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
scythe-codegen = { path = "../../crates/scythe-codegen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
